School_projects/SecondYear_projects/Java_programming/Java_compiler/src/test/deca/context/valid/OwnTests_stepB/valid/tests_operations/mult_Float_Int.deca
//Multiplication d'un flotant avec un int dans un flotant
//
{
    float a = 2.5;
    int b = 3;
    float c = a*b;
}