School_projects/SecondYear_projects/Java_programming/Java_compiler/src/test/deca/context/invalid/OwnTests_stepB/invalid/tests_operations/mult_Int_Float.deca
//Multiplication d'un flotant avec un int dans un int
//
{
    float a = 2.5;
    int b = 3;
    int c = a*b;
}